--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "postinstall": "husky install",
+    "install-cypress": "cypress install",
+    "verify-cypress": "cypress verify",
+    "clear-cypress-cache": "cypress cache clear",
+    "dev:prettier": "prettier --write \"cypress/**/*.js\" \"docs/**/*.md\" \"README.md\"",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
     "cypress:cucumber:run": "cypress run --config-file ./cypress.cucumber.config.js",
@@ -15,5 +20,14 @@
     "@badeball/cypress-cucumber-preprocessor": "^18.0.6",
     "@cypress/browserify-preprocessor": "^3.0.2",
     "cypress": "12.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cucumber": "^2.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8"
   }
 }
