--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cypress:cucumber:open": "cypress open --config-file ./cypress.cucumber.config.js"
   },
   "engines": {
-    "node": ">=18.0.0 <19"
+    "node": "<19"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^18.0.6",
