--- a/.github/workflows/dependent.yml
+++ b/.github/workflows/dependent.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo Child
-      - run: echo
+      - run: echo ${{ github.event.workflow_run.id }}
