--- a/.github/workflows/parent.yml
+++ b/.github/workflows/parent.yml
@@ -7,8 +7,8 @@ on:
      - test-*
 
 jobs:
-  dependent:
+  parent:
     runs-on: ubuntu-latest
     steps:
       - run: echo Parent
-      - run: echo ${{ github.event.workflow_run.id }}
+
