testing concurrency workflows

--- a/.github/workflows/combine-outputs.yml
+++ b/.github/workflows/combine-outputs.yml
@@ -38,7 +38,7 @@ jobs:
             test-${{ github.base_ref }}-
 
       - name: Restore Publish
-        id: cache-restore-test
+        id: cache-restore-publish
         uses: actions/cache/restore@v4
         with:
           fail-on-cache-miss: true
