testing error annotations

--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -1,7 +1,6 @@
 name: Error annotations
 
 on:
-  pull_request:
   workflow_dispatch:
   push:
 
@@ -15,7 +14,8 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || '' }}
 
       - id: message
-        run: errors=$(./stderr.sh 2>&1)
+        #run: errors=$(./stderr.sh 2>&1)
+        run: bash ./stderr.sh 2>&1
 
       - name: Add error annotations
         run: echo "::error title=YOUR-TITLE::${{ steps.message.outputs.errors }}"
