testing error annotations

--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -14,8 +14,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || '' }}
 
       - id: message
-        #run: errors=$(./stderr.sh 2>&1)
-        run: bash ./stderr.sh 2>&1
+        run: errors=$(bash ./stderr.sh 2>&1)
 
       - name: Add error annotations
         run: echo "::error title=YOUR-TITLE::${{ steps.message.outputs.errors }}"
