testing error annotations

--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -15,8 +15,7 @@ jobs:
 
       - id: message
         run: |
-          errors=$(bash ./stderr.sh 2>&1)
-          echo here
+          echo "errors=$(bash ./stderr.sh 2>&1)" >> "$GITHUB_OUTPUT"
 
       - name: Add error annotations
         if: ${{ failure() }}
