--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -15,8 +15,9 @@ jobs:
 
       - id: message
         run: |
+          delimiter=$(openssl rand -hex 8)
           {
-            echo 'errors<<EOF'
+            echo 'errors<<$delimiter'
             bash ./stderr.sh 2>&1
             echo EOF
           } >> "$GITHUB_OUTPUT"
