--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -15,10 +15,11 @@ jobs:
 
       - id: message
         run: |
+          delimiter="$(openssl rand -hex 8)"
           {
-            echo "errors<<$EOF"
-            bash ./stderr.sh 2>&1
-            echo "$EOF"
+            echo "errors<<$delimiter"
+            echo $(bash ./stderr.sh 2>&1)
+            echo "$delimiter"
           } >> "$GITHUB_OUTPUT"
 
       - run: echo ${{ steps.message.outcome }}
