--- a/.github/workflows/stderr.yml
+++ b/.github/workflows/stderr.yml
@@ -14,13 +14,21 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || '' }}
 
       - id: message
+#        run: |
+#          delimiter="$(openssl rand -hex 8)"
+#          {
+#            echo "errors<<$delimiter"
+#            echo $(bash ./stderr.sh 2>&1)
+#            echo "$delimiter"
+#          } >> "$GITHUB_OUTPUT"
+#          bash ./stderr.sh
         run: |
           delimiter="$(openssl rand -hex 8)"
           {
             echo "errors<<$delimiter"
             echo $(bash ./stderr.sh 2>&1)
             echo "$delimiter"
-          } >> "$GITHUB_OUTPUT"
+          } >> "$GITHUB_ENV"
           bash ./stderr.sh 
 
       - run: echo ${{ steps.message.outcome }}
@@ -28,4 +36,4 @@ jobs:
 
       - name: Add error annotations
         if: ${{ always() && steps.message.outcome == 'failure' }}
-        run: echo "::error title=ERROR MESSAGE::${{ steps.message.outputs.errors }}"
+        run: echo "::error title=ERROR MESSAGE::${{ env.errors }}"
