--- a/.github/workflows/cache-restore-cross-pr-branch.yml
+++ b/.github/workflows/cache-restore-cross-pr-branch.yml
@@ -24,7 +24,7 @@ jobs:
           restore-keys: |
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-
-            word-${{github.head_ref || github.ref_name }}-
+            word-${{github.head_ref || github.ref_name }}
 
       - run: ls -al -R
       - run: cat ./word.txt
@@ -46,7 +46,7 @@ jobs:
           restore-keys: |
             word-${{github.base_ref }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.base_ref }}-${{ github.run_id }}-
-            word-${{github.base_ref }}-
+            word-${{github.base_ref }}
 
       - run: ls -al -R
       - run: cat ./word.txt
