--- a/.github/workflows/cache-save.yml
+++ b/.github/workflows/cache-save.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: ./word.txt
-          key: word-${{ github.head_ref || github.ref_name }}
+          key: word-${{ github.head_ref || github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
