--- a/.github/workflows/cache-restore-cross-pr-branch.yml
+++ b/.github/workflows/cache-restore-cross-pr-branch.yml
@@ -10,7 +10,7 @@ jobs:
   restore-head:
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true
-    name: Restore word from cache
+    name: Restore word from cache (HEAD BRANCH)
     runs-on: ubuntu-latest
     steps:
 
@@ -32,7 +32,7 @@ jobs:
   restore-base:
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true
-    name: Restore word from cache
+    name: Restore word from cache (BASE BRANCH)
     runs-on: ubuntu-latest
     steps:
 
