--- a/.github/workflows/cache-restore-cross-pr-branch.yml
+++ b/.github/workflows/cache-restore-cross-pr-branch.yml
@@ -24,6 +24,7 @@ jobs:
           restore-keys: |
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-
+            word-${{github.head_ref || github.ref_name }}-
             word-${{github.head_ref || github.ref_name }}
 
       - run: ls -al -R
@@ -42,11 +43,12 @@ jobs:
         with:
           fail-on-cache-miss: true
           path: word.txt
-          key: word-${{ github.head_ref }}
+          key: word-${{ github.base_ref }}
           restore-keys: |
             word-${{github.base_ref }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.base_ref }}-${{ github.run_id }}-
-            word-${{github.base_ref }}
+            word-${ {github.base_ref }}-
+            word-${ {github.base_ref }}
 
       - run: ls -al -R
       - run: cat ./word.txt
