--- a/.github/workflows/cache-restore-cross-pr-branch.yml
+++ b/.github/workflows/cache-restore-cross-pr-branch.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           fail-on-cache-miss: true
           path: word.txt
-          key: word-${{ github.head_ref }}
+          key: word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
           restore-keys: |
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-
@@ -43,7 +43,7 @@ jobs:
         with:
           fail-on-cache-miss: true
           path: word.txt
-          key: word-${{ github.base_ref }}
+          key: word-${{github.base_ref }}-${{ github.run_id }}-${{ github.run_attempt }}
           restore-keys: |
             word-${{github.base_ref }}-${{ github.run_id }}-${{ github.run_attempt }}
             word-${{github.base_ref }}-${{ github.run_id }}-
