exact match of cache key

--- a/.github/workflows/restore-on-pr.yml
+++ b/.github/workflows/restore-on-pr.yml
@@ -24,6 +24,10 @@ jobs:
             word-${{github.head_ref || github.ref_name }}-${{ github.run_id }}-
             word-${{github.head_ref || github.ref_name }}-
             word-${{github.head_ref || github.ref_name }}
+            
+
+          # TESTING EXACT MATCH
+            word-restore-3-18912934597-1
 
       - run: ls -al -R
       - run: cat ./word.txt
