--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -1,7 +1,7 @@
 name: Scheduled with inputs
 
 on:
-  scheduled:
+  schedule:
     #TODO: temporary
     - cron: '0,5 * * * *'
   workflow_dispatch:
