--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -3,7 +3,7 @@ name: Scheduled with inputs
   #TODO: temporary
 on:
   schedule:
-    - cron: '0,5 * * * *'
+    - cron: '0/5 * * * *'
   workflow_dispatch:
     inputs:
       number:
