temp:scheduled workflow

--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -15,6 +15,7 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/workflows/echo.yml
         with:
           number: ${{ inputs.number || 99 }}
