--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -1,6 +1,6 @@
 name: Scheduled with inputs
 
-  #TODO: temporary
+#TODO: temporary
 on:
   schedule:
     - cron: '25,30,35,40 * * * *'
@@ -14,8 +14,6 @@ on:
 jobs:
   echo:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/echo.yml
-        with:
-          number: ${{ inputs.number || 99 }}
+    uses: ./.github/workflows/echo.yml
+    with:
+      number: ${{ inputs.number || 99 }}
