temp:scheduled workflow

--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -15,4 +15,4 @@ jobs:
   echo:
     uses: ./.github/workflows/echo.yml
     with:
-      number: ${{ inputs.number || 99 }}
+      number: ${{ fromJson(inputs.number || 99) }}
