temp:scheduled workflow

--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -3,7 +3,7 @@ name: Scheduled with inputs
 #TODO: temporary
 on:
   schedule:
-    - cron: '25,30,35,40 * * * *'
+    - cron: '* * * * *'
   workflow_dispatch:
     inputs:
       number:
