--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -4,12 +4,12 @@ name: Scheduled with inputs
 on:
   schedule:
     - cron: '* * * * *'
-  workflow_dispatch:
-    inputs:
-      number:
-        type: number
-        default: 1
-        required: false
+#  workflow_dispatch:
+#    inputs:
+#      number:
+#        type: number
+#        default: 1
+#        required: false
 
 jobs:
   echo:
