temp:scheduled workflow

--- a/.github/workflows/scheduled-with-inputs.yml
+++ b/.github/workflows/scheduled-with-inputs.yml
@@ -3,7 +3,7 @@ name: Scheduled with inputs
 #TODO: temporary
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '*/5 * * * *'
 #  workflow_dispatch:
 #    inputs:
 #      number:
