--- a/.github/workflows/restore-on-prev-attempt.yml
+++ b/.github/workflows/restore-on-prev-attempt.yml
@@ -17,7 +17,8 @@ jobs:
             word-${{ github.ref_name }}-${{ github.run_id }}-ORIGINAL
             word-main-
 
-      - if: ${{ hashFiles('word.txt') == '' }}
+      - name: Add OG run attempt to file if it doesnt exist
+        if: ${{ hashFiles('word.txt') == '' || github.run_attempt == '1' }}
         run: |
           run_attempt="${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
           echo ORIGINAL: >> word.txt
@@ -41,7 +42,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           fail-on-cache-miss: false
-          path: .cypress_load_balancer/spec-map.json
+          path: word.txt
           key: word-${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}
           # Restore keys in order:
           ## 1. Default provided key from inputs
