--- a/.github/workflows/restore-on-prev-attempt.yml
+++ b/.github/workflows/restore-on-prev-attempt.yml
@@ -18,14 +18,14 @@ jobs:
             word-main-
 
       - name: Add OG run attempt to file if it doesnt exist
-        if: ${{ steps.restore-word.outputs.cache-hit == 'false' }}
+        if: ${{ !steps.restore-word.outputs.cache-hit }}
         run: |
           run_attempt="${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
           echo ORIGINAL: >> word.txt
           echo $run_attempt >> word.txt
 
       - name: Cache map for all future run attempts map on first run attempt
-        if: ${{ steps.restore-word.outputs.cache-hit == 'false' }}
+        if: ${{ !steps.restore-word.outputs.cache-hit }}
         uses: actions/cache/save@v4
         with:
           key: word-${{ github.ref_name }}-${{ github.run_id }}-ORIGINAL
