--- a/.github/workflows/restore-on-prev-attempt.yml
+++ b/.github/workflows/restore-on-prev-attempt.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Add OG run attempt to file if it doesnt exist
         if: ${{ steps.restore-word.outputs.cache-hit != 'true' }}
         run: |
-          run_attempt="${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
+          run_attempt="(${{ github.run_number }}) ${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
           echo ORIGINAL: >> word.txt
           echo $run_attempt >> word.txt
 
       - name: Cache map for all future run attempts map on first run attempt
-        if: ${{ !steps.restore-word.outputs.cache-hit != 'true' }}
+        if: ${{ steps.restore-word.outputs.cache-hit != 'true' }}
         uses: actions/cache/save@v4
         with:
           key: ${{ env.original-word-cache-key }}
@@ -69,7 +69,7 @@ jobs:
 
       - name: Create textfile of this run attempt's information
         run: |
-          run_attempt="${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
+          run_attempt="(${{ github.run_number }}) ${{ github.ref_name }}-${{ github.run_id }}-${{ github.run_attempt }}"
           echo MERGED: >> word.txt
           echo $run_attempt >> word.txt
       - name: Read all attempts
