--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -10,6 +10,6 @@ jobs:
       - run: echo "${{ github.head_ref }}"
       - run: echo "${{ github.ref_name }}, endsWith - ${{endsWith(github.ref_name, 'main')}}"
       - name: Is true?
-        run: ${{ github.base_ref == 'master' || github.head_ref == 'master' || endsWith(github.ref_name, 'master') }}
+        run: ${{ github.base_ref == 'main' || github.head_ref == 'main' || endsWith(github.ref_name, 'main') }}
 
 
