--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -1,6 +1,8 @@
 name: Check branch name
 on:
   push:
+env:
+  is-for-trunk-branch: ${{ endsWith(github.base_ref, 'main') || endsWith(github.ref_name, 'main') }}
 
 jobs:
   check-branch-name:
@@ -10,6 +12,6 @@ jobs:
       - run: echo "${{ github.head_ref }}"
       - run: echo "${{ github.ref_name }}, endsWith - ${{endsWith(github.ref_name, 'main')}}"
       - name: Is true?
-        run: ${{ github.base_ref == 'main' || github.head_ref == 'main' || endsWith(github.ref_name, 'main') }}
+        run: ${{ github.base_ref == 'main' || endsWith(github.ref_name, 'main') }}
 
 
