test:going to test-main

--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -2,7 +2,7 @@ name: Check branch name for "main" (different branch)
 on:
   pull_request:
   push:
-    branches: [ main, main-test ]
+    branches: [ main, main-test, test-main ]
 env:
   is-for-trunk-branch: ${{ endsWith(github.base_ref, 'main') || endsWith(github.ref_name, 'main') }}
 
