--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -18,11 +18,14 @@ jobs:
 
       - name: ref_name
         run: echo "${{ github.ref_name }}, endsWith - ${{endsWith(github.ref_name, 'main')}}"
+
       - run: sleep 10
+        shell: bash
+
       - name: Run only if for trunk branch
         if: ${{ env.is-for-trunk-branch }}
         id: run-only
-        #run: exit 0
+        run: exit 0
 
   only-main:
     runs-on: ubuntu-latest
