--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -9,6 +9,7 @@ env:
 jobs:
   check-branch-name:
     runs-on: ubuntu-latest
+    if: ${{ env.is-for-trunk-branch }}
     steps:
       - name: Base_ref
         run: echo "${{ github.base_ref }}"
@@ -23,13 +24,13 @@ jobs:
         shell: bash
 
       - name: Run only if for trunk branch
-        if: ${{ env.is-for-trunk-branch }}
         id: run-only
         run: exit 1
 
   only-main:
     runs-on: ubuntu-latest
     needs: check-branch-name
+    if: (!cancelled())
     steps:
       - run: echo ${{ env.is-for-trunk-branch }}
       - run: echo "complete!!"
