--- a/.github/workflows/check-branch-name.yml
+++ b/.github/workflows/check-branch-name.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main, main-test, test-main, test ]
 env:
-  is-for-trunk-branch: ${{ endsWith(github.base_ref, 'main') || endsWith(github.ref_name, 'main') }}
+  is-for-trunk-branch: ${{ endsWith(github.base_ref, 'main') || github.ref_name == 'main' }}
 
 jobs:
   check-branch-name:
@@ -14,9 +14,6 @@ jobs:
     steps:
       - name: Base_ref
         run: echo "${{ github.base_ref }}"
-
-      - name: Head_ref
-        run: echo "${{ github.head_ref }}"
 
       - name: ref_name
         run: echo "${{ github.ref_name }}, endsWith - ${{endsWith(github.ref_name, 'main')}}"
